# My-Codes

./: README.md  slm.cpp  struct .c
Algorithm learing set/: GridTraveler .cpp  fib memo .cpp  fibonacci recursion .c++  o(n) time .cpp  recursion factoriel.c++
Compatitive Programming/: 0. input.txt  1. input and output .cpp  2. Working with number .cpp  3. Type names and Macros .cpp
Compatitive Programming/1.Templates/: 1.Template.cpp  Dijkstra.cpp
Compatitive Programming/learing_stage/: two_pointer.cpp
Contest/AGC/: Matric carpimi .cpp  (+2 more)
Euler/: 1.Q.cpp  2.Q  2.Q.cpp  3.Q.cpp  812.cpp  try  try.cpp
Probability/: Calculate_expected_valu.cpp
c dosyalar/: FPP .c  FPP 2 .c  Untitled1.cpp  file .c  pos neg balance .c  read.c  read.txt  soru4.c  vector homework.cpp  write.c
jupiter/: tablo.ipynb
part of c++/: My home.cpp  first.c++  gpa .c++  trying page.c++
part_of_c++/open_cv/: 1.Besmele  1.Besmele.cpp  CMakeLists.txt  main.cpp
part_of_c++/open_cv/Learing_files.cpp/1.İmage_video_webcam/: main.cpp
part_of_c++/open_cv/Learing_files.cpp/2.Basic_Function/: main.cpp
part_of_c++/open_cv/Learing_files.cpp/3.Yuz_algılama.cpp/: main.cpp
part_of_c++/open_cv/Learing_files.cpp/4.Resize_and_crop/: main
part_of_c++/open_cv/Learing_files.cpp/7.Perspective/: main.cpp
part_of_c++/open_cv/Working_Space/: CMakeLists.txt  main.cpp
project/: Q9.cpp  denemev.cpp
projectt/: 1. yunus_homework.c  2. eren_homwork_fibonaci.c  3. eren_prog_odev.c  check_perfect_number.c  progdil_my.c  request_caffe .c
yarisma soru cozumleri/: Stringer Things .c  ice scream yum yum .c
(+329 files in other folders)
